Fix compilation issues
Signed-off-by: Jonah Snider <jonah@jonahsnider.com>