@@ -4,7 +4,6 @@ import com.google.common.collect.ImmutableList;
 import edu.wpi.first.wpilibj2.command.Command;
 import edu.wpi.first.wpilibj2.command.Commands;
 import edu.wpi.first.wpilibj2.command.Subsystem;
-import java.util.List;
 
 public class RobotCommands {
   private final RobotManager robot;
@@ -19,7 +18,7 @@ public class RobotCommands {
     requirementsList = ImmutableList.of(robot.groundManager.deploy, robot.groundManager.intake);
     gmRequirements = requirementsList.toArray(Subsystem[]::new);
     requirementsList =
-        List.of(
+        ImmutableList.of(
             robot.elevator,
             robot.arm,
             robot.claw,
